Fixing small issues and visibility

--- a/src/app.css
+++ b/src/app.css
@@ -63,7 +63,7 @@
     --shiki-comment: oklch(0.441 0.007 170.152 / 0.82);
     --shiki-keyword: oklch(0.375 0.138 26.706);
     --shiki-string: oklch(0.775 0.088 83.214);
-    --shiki-constant: oklch(0.402 0.161 311.769);
+    --shiki-constant: oklch(0.493 0.149 313.004);
     --shiki-function: oklch(0.676 0.096 350.214);
     --shiki-type: oklch(0.749 0.058 187.521);
     --shiki-attribute: oklch(0.676 0.096 350.214);
